<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="150dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/carViewCarousel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:cardElevation="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.synnapps.carouselview.CarouselView
                android:id="@+id/carouselView"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:fillColor="@color/button"
                app:pageColor="#00000000"
                app:radius="5dp"
                app:slideInterval="4000"
                app:strokeColor="#FF777777"
                app:strokeWidth="1dp" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/portalTitle"
            style="@style/TextFontAndColourTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/portalTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/carViewCarousel" />

        <TextView
            android:id="@+id/portalDesc"
            style="@style/TextFontAndColour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/portalDesc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/portalTitle" />
        <TextView
            android:id="@+id/openWebsiteTv"
            style="@style/TextFontAndColour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginTop="6dp"
            android:text="@string/openWebsiteTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/portalDesc" />


        <TextView
            android:id="@+id/instructionTitle"
            style="@style/TextFontAndColourTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/openWebsiteTv"
            tools:text="Инструкция" />

        <TextView
            android:id="@+id/instructionDesc"
            style="@style/TextFontAndColour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/instructionDesc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructionTitle" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewAbout"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:layout_margin="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp"
            app:layout_constraintTop_toBottomOf="@+id/instructionDesc">

            <TextView
                style="@style/TextFontAndColour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/background_step"
                android:padding="5dp"
                android:text="@string/step1"
                android:textFontWeight="500"
                android:textSize="15sp" />

            <TextView
                style="@style/TextFontAndColourTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:layout_marginTop="11dp"
                android:text="@string/aboutTitle" />

            <TextView
                style="@style/TextFontAndColour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="8dp"
                android:text="@string/step1_desc" />

            <Button
                android:id="@+id/openWebsiteButton"
                android:layout_width="363dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="110dp"
                android:layout_marginEnd="8dp"
                style="@style/ButtonStyle"
                android:text="@string/openWebsiteButton"
                 />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewReg"
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:layout_margin="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp"
            app:layout_constraintTop_toBottomOf="@+id/cardViewAbout">

            <TextView
                style="@style/TextFontAndColour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/background_step"
                android:padding="5dp"
                android:text="@string/step2"
                android:textFontWeight="500"
                android:textSize="16sp" />

            <TextView
                style="@style/TextFontAndColourTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:layout_marginTop="11dp"
                android:text="@string/reg" />

            <TextView
                style="@style/TextFontAndColour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="8dp"
                android:text="@string/step2_desc" />

            <Button
                android:id="@+id/regButton"
                android:layout_width="363dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="110dp"
                android:layout_marginEnd="8dp"
                android:text="@string/reg"
                style="@style/ButtonStyle"
                 />

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>