<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.NewFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        style="@style/TextFontAndSize"
        android:text="@string/spinnerTextViewSum"
        app:layout_constraintBottom_toTopOf="@+id/carViewSum"
        app:layout_constraintStart_toStartOf="@+id/carViewSum" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        style="@style/TextFontAndSize"
        android:text="@string/spinnerTextViewSrok"
        app:layout_constraintBottom_toTopOf="@+id/cardViewSrok"
        app:layout_constraintStart_toStartOf="@+id/cardViewSrok" />

    <androidx.cardview.widget.CardView
        android:id="@+id/carViewSum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        app:cardElevation="2dp"
        app:layout_constraintEnd_toStartOf="@+id/space"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/space">

        <Spinner
            android:id="@+id/spinnerSum"
            style="@style/Widget.AppCompat.Light.DropDownItem.Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewSrok"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        app:cardElevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/space"
        app:layout_constraintTop_toTopOf="@id/space">

        <Spinner
            android:id="@+id/spinnerSrok"
            style="@style/Widget.AppCompat.Light.DropDownItem.Spinner"
            android:layout_width="match_parent"

            android:layout_height="wrap_content" />
    </androidx.cardview.widget.CardView>

    <Space
        android:id="@+id/space"
        android:layout_width="38dp"
        android:layout_height="23dp"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toStartOf="@+id/cardViewSrok"
        app:layout_constraintStart_toEndOf="@+id/carViewSum"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        style="@style/TextFontAndSize"
        android:text="@string/spinnerWalletTextView"
        app:layout_constraintBottom_toTopOf="@+id/cardviewWallet"
        app:layout_constraintStart_toStartOf="@+id/cardviewWallet" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardviewWallet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardElevation="2dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space" >

        <Spinner
            android:id="@+id/spinnerWallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        style="@style/TextFontAndSize"
        android:text="@string/spinnerProviderTextView"
        app:layout_constraintBottom_toTopOf="@+id/cardViewProv"
        app:layout_constraintStart_toStartOf="@+id/cardViewProv" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewProv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardElevation="2dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardviewWallet">

        <Spinner
            android:id="@+id/spinnerProvider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/editTextNumber"
        style="@style/TextFontAndSize"
        app:layout_constraintBottom_toTopOf="@+id/etNumber"
        app:layout_constraintStart_toStartOf="@+id/etNumber" />

    <EditText
        android:id="@+id/etNumber"
        style="@style/TextFontAndColour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="32dp"
        android:text="@string/hintEdNumber"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewProv" />

    <TextView
        style="@style/TextFontAndColour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:text="@string/newCreditTextView"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNumber" />

    <Button
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/nextButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>