<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewAccInfo"
            android:layout_width="match_parent"
            android:layout_height="215dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewImage"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:elevation="12dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="40dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_centerHorizontal="true">
                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="80dp"
                        android:layout_height="match_parent"

                        android:scaleType="centerCrop"
                        android:src="@drawable/avatar1"
                         />
                </androidx.cardview.widget.CardView>



                <TextView
                    android:id="@+id/nameTv"
                    style="@style/TextFontAndColour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:textStyle="bold"
                    android:text="@string/nameTextView"
                    android:textSize="17sp"
                    app:layout_constraintStart_toEndOf="@+id/cardViewImage"
                    app:layout_constraintTop_toTopOf="@+id/cardViewImage" />

                <TextView
                    android:id="@+id/dataTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/dataTextView"
                    app:layout_constraintBottom_toTopOf="@+id/numberTv"
                    app:layout_constraintStart_toEndOf="@+id/cardViewImage"
                    app:layout_constraintTop_toBottomOf="@+id/nameTv" />

                <TextView
                    android:id="@+id/numberTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/numberTextView"
                    app:layout_constraintBottom_toBottomOf="@+id/cardViewImage"
                    app:layout_constraintStart_toEndOf="@+id/cardViewImage" />

                <TextView
                    android:id="@+id/statusTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="22dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/statusTextView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardViewImage" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/creditStatusTextView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/statusTv" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:text="@string/accountInfoTextView"
                    android:textColor="@color/button"
                    android:fontFamily="@font/roboto"
                    android:textFontWeight="400"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/settingsAccTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="16dp"
            android:text="@string/settingsAccTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardViewAccInfo" />

        <ImageView
            android:id="@+id/ivPhoto"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"

            android:src="@drawable/ic_account_circle"
           app:layout_constraintTop_toBottomOf="@+id/settingsAccTv"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/photoTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Фото профиля"
            style="@style/TextFontAndColour"
            app:layout_constraintBottom_toBottomOf="@id/ivPhoto"
            app:layout_constraintStart_toEndOf="@+id/ivPhoto"
            app:layout_constraintTop_toTopOf="@+id/ivPhoto" />
        <ImageView
            android:id="@+id/ivHistory"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:src="@drawable/ic_history"
            app:layout_constraintTop_toBottomOf="@+id/ivPhoto"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/historyTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="История действий профиля"
            style="@style/TextFontAndColour"
            app:layout_constraintBottom_toBottomOf="@id/ivHistory"
            app:layout_constraintStart_toEndOf="@+id/ivHistory"
            app:layout_constraintTop_toTopOf="@+id/ivHistory" />
        <ImageView
            android:id="@+id/ivChangePass"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:src="@drawable/ic_vpn_key"
            app:layout_constraintTop_toBottomOf="@+id/ivHistory"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/changePassTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Смена профиля"
            style="@style/TextFontAndColour"
            app:layout_constraintBottom_toBottomOf="@id/ivChangePass"
            app:layout_constraintStart_toEndOf="@+id/ivChangePass"
            app:layout_constraintTop_toTopOf="@+id/ivChangePass" />
        <ImageView
            android:id="@+id/ivLogout"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:src="@drawable/ic_exit_to_app"
            app:layout_constraintTop_toBottomOf="@+id/ivChangePass"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/logoutTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Выйти из учетной записи"
            style="@style/TextFontAndColour"
            app:layout_constraintBottom_toBottomOf="@id/ivLogout"
            app:layout_constraintStart_toEndOf="@+id/ivLogout"
            app:layout_constraintTop_toTopOf="@+id/ivLogout" />

        <TextView
            android:id="@+id/settingsTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="16dp"
            android:text="@string/settingsAppTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLogout" />

        <ImageView
            android:id="@+id/ivNotif"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:src="@drawable/ic_notifications"
            app:layout_constraintTop_toBottomOf="@+id/settingsTv"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/notifTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Звук уведомлений"
            style="@style/TextFontAndColour"
            app:layout_constraintBottom_toBottomOf="@id/ivNotif"
            app:layout_constraintStart_toEndOf="@+id/ivNotif"
            app:layout_constraintTop_toTopOf="@+id/ivNotif" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/notifTv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.819"
            app:layout_constraintStart_toEndOf="@+id/notifTv"
            app:layout_constraintTop_toTopOf="@+id/notifTv"
            app:layout_constraintVertical_bias="0.769"
          android:thumbTint="@color/button"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <ImageView
            android:id="@+id/ivDarkTheme"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:src="@drawable/ic_nights_stay"
            app:layout_constraintTop_toBottomOf="@+id/ivNotif"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/darkThemeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Темная тема приложения"
            style="@style/TextFontAndColour"
            app:layout_constraintBottom_toBottomOf="@id/ivDarkTheme"
            app:layout_constraintStart_toEndOf="@+id/ivDarkTheme"
            app:layout_constraintTop_toTopOf="@+id/ivDarkTheme" />
        <ImageView
            android:id="@+id/ivDoc"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:src="@drawable/ic_drive_file"
            app:layout_constraintTop_toBottomOf="@+id/ivDarkTheme"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/docTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Документы конфидециальности"
            style="@style/TextFontAndColour"
            app:layout_constraintBottom_toBottomOf="@id/ivDoc"
            app:layout_constraintStart_toEndOf="@+id/ivDoc"
            app:layout_constraintTop_toTopOf="@+id/ivDoc" />

        <ImageView
            android:id="@+id/ivContacts"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:src="@drawable/ic_info"
            app:layout_constraintTop_toBottomOf="@+id/ivDoc"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/contactsTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Контакты и обратная связь"
            style="@style/TextFontAndColour"
            app:layout_constraintBottom_toBottomOf="@id/ivContacts"
            app:layout_constraintStart_toEndOf="@+id/ivContacts"
            app:layout_constraintTop_toTopOf="@+id/ivContacts" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>